--- a/index.html
+++ b/index.html
@@ -8,14 +8,47 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
-<!--Javascript Files-->
-<script src="js/bootstrap.min.js">
-</script><script src="js/bootstrap.js">
-</script><script src="js/Chart.js"></script>
+<link href="css/main.css" rel="stylesheet" type="text/css">
 <title>BSS Personal Dashboard</title>
 </head>
 
 <body>
+
+	<div class="container">
+		<div class="row">
+			<div class="sidebar span5">
+				<div class="cover">
+					<div class="cover-photo">
+						<div class="cover-image">
+							<a href="#" class="cover-avatar">
+								<img src="images/samples/user.png">
+							</a>
+						</div>
+					</div>
+					<div class="cover-author">
+						<h1 class="brand">Megan Lee</h1>
+						<h2 class="tagline">Photographer</h2>
+						<p class="social-icon">
+							<a class="social-twitter" href="#"></a>
+							<a class="social-facebook" href="#"></a>
+							<a class="social-linkedin" href="#"></a>
+							<a class="social-instagram" href="#"></a>
+						</p>
+					</div>
+				</div>
+			</div>
+
+         </div>
+     
+     </div>
+            
+
+
+
+<!--Javascript Files-->
+<script src="js/bootstrap.min.js">
+</script><script src="js/bootstrap.js">
+</script><script src="js/Chart.js"></script><script src="js/jquery-1.10.1.min.js"></script>
+
 </body>
 </html>
