--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="well">
             <h3>About Me</h3>
             <img src="images/Baljeet.jpg">
-            <p >I am computer engineer from india and freelance web programmer. What i do (#OpenSource @Github/sandhus. #Windows #Techie #Android #Blogger #AlwaysCurious #CSE #Programmer #Web2.0)</p>
+            <p >I am computer engineer from india & freelance web programmer. What i do (#OpenSource @Github/sandhus. #Windows #Techie #Android #Blogger #AlwaysCurious #CSE #Programmer #Web2.0)</p>
             <p style="alignment-adjust:central"> <a href="http://facebook.com/bsinghs">FB</a> <a href="http://twitter.com/tenthgeek">TW</a> <a href="http://github.com/sandhus">Git</a></p>
           </div>
         </div>
